add Docker package install

--- a/kubernetes/1.Cluster_initializing/2.Multi Master Node (HA)/0.HA-LoadBalancer.md
+++ b/kubernetes/1.Cluster_initializing/2.Multi Master Node (HA)/0.HA-LoadBalancer.md
@@ -29,5 +29,5 @@
 
 	service haproxy reload
 
-위 컨피그 파일에서 $LB와 $node1~3은 로드밸런서와 마스터노드의 [아이피:포트번호들] 을 셋팅해주면 된다.\
+위 컨피그 파일에서 $LB와 $node1~3은 로드밸런서와 마스터노드의 [아이피:포트번호]를 셋팅해주면 된다.
 
