add multi master initializing

--- a/kubernetes/1.Cluster_initializing/2.Multi Master Node (HA)/1.Multi-Master.md
+++ b/kubernetes/1.Cluster_initializing/2.Multi Master Node (HA)/1.Multi-Master.md
@@ -1,4 +1,38 @@
 # Multi Master Cluster initializing
+- - -
 쿠버네티스는 다수의 마스터노드와 워커노드로 클러스터를 구성 할 수 있다.<br>
 멀티 마스터노드를 사용할 경우 클러스터의 안정성을 높일 수 있으며, 무중단 업데이트도 가능하다.<br>
 
+### Cluster init
+- - -
+
+kubeadm-config 생성
+
+	echo "
+	apiVersion: kubeadm.k8s.io/v1beta3
+	kind: InitConfiguration
+	localAPIEndpoint:
+	  advertiseAddress: [master]
+	  bindPort: 6443
+	---
+	apiVersion: kubeadm.k8s.io/v1beta3
+	kind: ClusterConfiguration
+	kubernetesVersion: stable
+	controlPlaneEndpoint: [LBIP:Port]
+	networking:
+	  podSubnet: \"10.244.0.0/16\"" >> kubeadm-config.yaml
+	  
+kubeadm-config 에는 init을 진행할 Master1의 IP와 로드밸런서의IP/Port를 작성해준다.
+	
+cluster init
+
+	kubeadm init --upload-certs --config kubeadm-config.yaml
+	
+### Join Command
+- - -
+
+certificate-key 확인
+	kubeadm init phase upload-certs --upload-certs 
+
+Join command 출력
+	kubeadm token create --print-join-command --certificate-key <key>
